--- a/compress-img/package.json
+++ b/compress-img/package.json
@@ -4,6 +4,7 @@
     "build": "webpack --progress --colors --watch --display-modules --display-reasons --config webpack.config.js"
   },
   "devDependencies": {
+    "@open-wc/webpack-import-meta-loader": "^0.4.7",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
